0.6-3 fix to ordering in svymean.sqlrepsurvey (Antony Damico)

      svyquantile was returning confidence intervals for the median regardles of 
      what quantile was requested (Antony Damico)

      svyquantile didn't handle the maximum or minimum. The standard errors are
      still not very accurate (since the max and min don't have Normal distributions),
      but the code now runs (Antony Damico)

      add print method for sqlsurvey results


0.6-2 update() now works on replicate-weight designs, with svymean() and subset()


0.6-1 fix handling of ( in sqlexpr

      fix handling of byvars with missing values in svymean.sqlsurvey

0.6  initial experiment with update() function.

     change DESCRIPTION to pretend that RMonetDB isn't a dependency,
     because of r-forge problem

0.5  always treat character variables as factors
     
     fix bug in subset.sqlsurvey design 

     fix typo in svyquantile for sqlsurvey design

     sqlexpr prints character constants with quotes

     fix typo in open.sqlsurvey [all Anthony D'Amico]

0.4-3 allow linearisation variances without any strata.

0.4-1 faster svyquantile using random sample to start.

    svyquantile drops missing observations

    better approach to subsets for replicate-weights.

    svyloglin() method for sqlrepsurvey

    svylm() works with MonetDB's flavour of SQL.

    svychisq() for Rao-Scott tests (via svyloglin)

    simple expressions can be used: eg, ~I(relp %in% 0:15)

    ~cut(x,breaks) can be used.

0.4 Renamed to sqlsurvey.

    Added support for replicate weights

    switched to JDBC and MonetDB rather than SQLite

0.3 faster creation from existing SQLite database

    added sqlocpoly for smoothing and density estimation

    added sqlhexbin
    
    open.sqlsurvey() now checks for the existence of the file

    sqlsubst() allows (and ignores) NULL replacement values


0.2 added svylm

    allowed sampling with replacement

0.1  Initial version
